AjayKemparaj: Minor code changes ,saved few objects
r14159